# openprecedent

./: .codex-review-proof  .gitignore  .markdownlint.json  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  pyproject.toml
.codex/pm/epics/: codex-runtime-research.md  local-runtime-validation.md  mvp-release-closeout.md  public-cli-foundation.md  real-history-quality.md  runtime-decision-lineage-integration.md  semantic-decision-foundation.md
.codex/pm/issue-state/: 100-define-post-mvp-research-evolution-framework.md  106-issue-scoped-development-state.md  131-validate-codex-real-project-decision-lineage-reuse.md  150-fix-research-archive-known-files.md  152-export-harnesshub-codex-rounds-as-importable-searchable-history-artifacts.md  153-import-exported-harnesshub-rounds-into-the-shared-runtime-and-extract-decisions.md  154-validate-non-empty-matched-case-ids-for-a-later-harnesshub-runtime-query.md  155-improve-harnesshub-decision-lineage-matching-beyond-lexical-overlap.md  161-auto-seed-shared-runtime-from-completed-harnesshub-rounds.md  163-research-contamination-controls-for-decision-lineage-retrieval.md  177-migrate-case-commands-to-rust-cli.md  (+50 more)
.githooks/: pre-push
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: coverage.yml  feishu-pr-notify.yml  markdownlint.yml  pr-review-gate.yml  python-ci.yml  rust-ci.yml
deploy/cron/: openprecedent-collector.cron
deploy/systemd/: openprecedent-collector.service  openprecedent-collector.timer
docs/: README.md
docs/architecture/: README.md  mvp-design.md  openclaw-silent-collection.md
docs/engineering/: README.md  codex-runtime-boundary.md  codex-runtime-decision-lineage-workflow.md  codex-runtime-startup-guide.md  codex-runtime-startup-validation.md  feishu-pr-notifications.md  harness-capability-analysis.md  harness-reuse-guide.md  harnesshub-real-project-observation-log.md  harnesshub-real-project-validation-plan.md  harnesshub-real-project-validation-report.md  merge-validation.md  openclaw-collector-operations.md  openclaw-collector-rollout-validation.md  openclaw-full-user-journey-validation.md  openclaw-live-validation-harness.md  openclaw-real-runtime-decision-lineage-validation.md  openclaw-runtime-decision-lineage-trigger-rerun.md  openclaw-runtime-decision-lineage-validation.md  repository-governance.md  research-archive-workflow.md  review-policy.md  rust-public-cli-design.md  rust-public-cli-implementation.md  technical-selection.md  tooling-setup.md  using-openprecedent.md
docs/product/: README.md  mvp-prd.md  mvp-release-closeout.md  mvp-release-notes-template.md  mvp-release-publication-flow.md  mvp-release-scope.md  mvp-release-validation-checklist.md  mvp-roadmap.md  mvp-status.md  openprecedent-jtbd-and-competitive-wedge.md  openprecedent-jtbd-phase-conclusion.md  strategy.md
docs/research/: README.md  competitive-landscape.md  plugmem-fact-vs-prescription.md  plugmem-fine-grained-retrieval-units.md  plugmem-memory-utility-evaluation.md  plugmem-openprecedent-analysis.md  plugmem-reusable-knowledge-layer.md
docs/zh/: README.md
research-artifacts/agentharnesskit/: README.md
research-artifacts/harnesshub/: README.md
rust/openprecedent-capture-codex/: Cargo.toml
rust/openprecedent-capture-codex/src/: lib.rs
rust/openprecedent-capture-openclaw/: Cargo.toml
rust/openprecedent-capture-openclaw/src/: lib.rs
rust/openprecedent-cli/: Cargo.toml
rust/openprecedent-cli/src/: main.rs
rust/openprecedent-cli/tests/: case_contract.rs  codex_capture_contract.rs  decision_contract.rs  doctor_contract.rs  eval_contract.rs  event_contract.rs  lineage_brief_contract.rs  lineage_invocation_contract.rs  openclaw_capture_contract.rs  replay_precedent_contract.rs
rust/openprecedent-contracts/: Cargo.toml
rust/openprecedent-core/: Cargo.toml
rust/openprecedent-store-sqlite/: Cargo.toml
rust/openprecedent-store-sqlite/src/: lib.rs
scripts/: README.md  archive_research_artifacts.py  check_branch_freshness.py  check_mvp_coverage_gate.py  export_harnesshub_codex_round.py  import_harnesshub_codex_round.py  install-collector-assets.sh  install-hooks.sh  install_harnesshub_skill.py  render_coverage_summary.py  run-agent-preflight.sh  run-codex-decision-lineage-workflow.sh  run-codex-live-validation.sh  run-codex-review-checkpoint.sh  run-codex-session-start.sh  run-collector.sh  run-coverage.sh  run-e2e.sh  run-harnesshub-decision-lineage-workflow.sh  run-harnesshub-matched-case-validation.sh  run-openclaw-live-validation.sh  run-pytest.sh  sync_harnesshub_shared_runtime.py  triage_pr_checks.py
scripts/lib/: openprecedent-rust-cli.sh  openprecedent_rust_cli.py
skills/openprecedent-decision-lineage/: SKILL.md
skills/openprecedent-harnesshub-composition/: SKILL.md
skills/openprecedent-harnesshub-validation/: SKILL.md
src/: README.md
src/openprecedent/: __init__.py  api.py  cli.py  codex_pm.py  config.py  services.py  storage.py
tests/: README.md  conftest.py  test_api.py  test_branch_freshness_script.py  test_ci_triage_script.py  test_cli.py  test_codex_live_validation_script.py  test_codex_pm.py  test_codex_review_checkpoint.py  test_codex_runtime_workflow_script.py  test_config.py  test_coverage_summary_script.py  test_e2e_script.py  test_harnesshub_matched_case_validation_script.py  test_harnesshub_round_export_script.py  test_harnesshub_round_import_script.py  test_harnesshub_shared_runtime_sync_script.py  test_harnesshub_skill_install_script.py  test_live_validation_script.py  test_pre_push_hook.py  test_preflight_script.py  test_pytest_runner_script.py  test_research_archive_script.py  test_rust_cli_workspace.py
tests/fixtures/: codex_rollout.jsonl  codex_rollout_noisy.jsonl  codex_rollout_precedent_current.jsonl  codex_rollout_precedent_operational_overlap.jsonl  codex_rollout_precedent_semantic_match.jsonl  codex_rollout_semantic.jsonl  openclaw_trace.jsonl
(+276 files in other folders)
