[workspace]
members = [
  "rust/openprecedent-cli",
  "rust/openprecedent-contracts",
  "rust/openprecedent-core",
  "rust/openprecedent-store-sqlite",
  "rust/openprecedent-capture-openclaw",
  "rust/openprecedent-capture-codex",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
version = "0.1.0"
authors = ["yaoyinnan <35447132+yaoyinnan@users.noreply.github.com>"]

[workspace.dependencies]
clap = { version = "4.5.38", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
