[workspace]
members = [
  "rust/openprecedent-cli",
  "rust/openprecedent-contracts",
  "rust/openprecedent-core",
  "rust/openprecedent-store-sqlite",
  "rust/openprecedent-capture-openclaw",
  "rust/openprecedent-capture-codex",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
version = "0.1.0"
authors = ["yaoyinnan <35447132+yaoyinnan@users.noreply.github.com>"]

[workspace.dependencies]
assert_cmd = "2.1.1"
clap = { version = "4.5.38", features = ["derive"] }
predicates = "3.1.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tempfile = "3.20.0"
thiserror = "2.0.12"
toml = "0.8.23"
