[workspace]
members = [
  "rust/openprecedent-cli",
  "rust/openprecedent-contracts",
  "rust/openprecedent-core",
  "rust/openprecedent-store-sqlite",
  "rust/openprecedent-capture-openclaw",
  "rust/openprecedent-capture-codex",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
version = "0.1.0"
authors = ["yaoyinnan <35447132+yaoyinnan@users.noreply.github.com>"]

[workspace.dependencies]
assert_cmd = "2.1.1"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.38", features = ["derive"] }
predicates = "3.1.3"
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
shlex = "1.3.0"
strum = { version = "0.27.2", features = ["derive"] }
tempfile = "3.20.0"
thiserror = "2.0.12"
toml = "0.8.23"
uuid = { version = "1.18.1", features = ["v4"] }
