[project]
name = "openprecedent"
version = "0.1.0"
description = "Open decision replay and precedent layer for agents."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [
  { name = "yaoyinnan", email = "35447132+yaoyinnan@users.noreply.github.com" }
]
dependencies = [
  "fastapi>=0.116.0,<1.0.0",
  "pydantic>=2.11.0,<3.0.0",
  "uvicorn>=0.35.0,<1.0.0",
]

[project.scripts]
openprecedent = "openprecedent.cli:run"
openprecedent-pm = "openprecedent.codex_pm:run"

[dependency-groups]
dev = [
  "httpx>=0.28.0,<1.0.0",
  "pytest>=8.4.0,<9.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
