[package]
name = "openprecedent-capture-codex"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
chrono.workspace = true
openprecedent-contracts = { path = "../openprecedent-contracts" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
