[package]
name = "openprecedent-capture-openclaw"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
chrono.workspace = true
openprecedent-core = { path = "../openprecedent-core" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
