[package]
name = "openprecedent-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "openprecedent"
path = "src/main.rs"

[dependencies]
clap.workspace = true
openprecedent-contracts = { path = "../openprecedent-contracts" }
openprecedent-core = { path = "../openprecedent-core" }
