[package]
name = "openprecedent-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "openprecedent"
path = "src/main.rs"

[dependencies]
clap.workspace = true
openprecedent-contracts = { path = "../openprecedent-contracts" }
openprecedent-core = { path = "../openprecedent-core" }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
serde_json.workspace = true
tempfile.workspace = true
