[package]
name = "openprecedent-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "openprecedent"
path = "src/main.rs"

[dependencies]
chrono.workspace = true
clap.workspace = true
openprecedent-contracts = { path = "../openprecedent-contracts" }
openprecedent-core = { path = "../openprecedent-core" }
openprecedent-capture-openclaw = { path = "../openprecedent-capture-openclaw" }
openprecedent-store-sqlite = { path = "../openprecedent-store-sqlite" }
serde.workspace = true
serde_json.workspace = true
shlex.workspace = true
uuid.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
serde_json.workspace = true
tempfile.workspace = true
